--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sugo-client",
   "version": "1.0.0",
-  "description": "Abstract client for SUGOS",
+  "description": "Abstract class for SUGOS clients",
   "main": "lib",
   "scripts": {
     "test": "node ./ci/test.js",
