--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sugo-client",
   "version": "1.0.0",
   "description": "Abstract class for SUGOS clients",
+  "browser": "shim/browser",
   "main": "lib",
   "scripts": {
     "test": "node ./ci/test.js",
@@ -41,7 +42,8 @@
     "coz": "^6.0.20",
     "injectmock": "^2.0.0",
     "sg-socket": "^1.0.15",
-    "sg-socket-client": "^1.5.0"
+    "sg-socket-client": "^1.5.0",
+    "sugos-travis": "^2.0.7"
   },
   "engines": {
     "node": ">=6",
