--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "injectmock": "^2.0.0",
     "sg-socket": "^1.0.15",
     "sg-socket-client": "^1.5.0",
-    "sugos-travis": "^2.0.7"
+    "sg-templates": "^1.2.5",
+    "sugos-travis": "^2.0.7",
+    "writeout": "^2.1.0"
   },
   "engines": {
     "node": ">=6",
