EventEmitterを継承するようにした

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sugo-client",
-  "version": "1.0.1",
-  "description": "Abstract class for SUGOS clients",
+  "version": "1.1.0",
+  "description": "Abstract class for SUGOS clients like actors and callers",
   "browser": "shim/browser",
   "main": "lib",
   "scripts": {
